# phoxi_camera

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
cfg/: phoxi_camera.cfg
config/: config.yaml  phoxi_camera.yaml
include/phoxi_camera/: CoordinatesSpaceTypes.h  PhoXiConversions.h  PhoXiDeviceInformation.h  PhoXiException.h  PhoXiInterface.h  RosConversions.h  RosInterface.h  TransformationMatrixConversions.h
launch/: phoxi_camera.launch  phoxi_camera_test.launch  phoxi_camera_unittest.test  run_phoxi_control.sh
msg/: DeviceInformation.msg  matrix.msg
src/: PhoXiInterface.cpp  RosInterface.cpp  gtest_main.cpp  phoxi_camera_node.cpp
srv/: GetFrame.srv  SaveFrame.srv  SetTransformationMatrix.srv  TransformationMatrix.srv  TriggerImage.srv
test/: README.md
test/gtest/: README.md  test_phoxi_api_interface.cpp  test_phoxi_interface.cpp  test_phoxi_interface.h  test_ros_interface.cpp
test/interfaces/: config.py  conftest.py  ros_utils.py  test_phoxi_camera_interfaces.py  test_phoxi_camera_interfaces_exist.py  test_phoxi_camera_ros_interfaces.py  test_ros_interface_class.py
test/interfaces/launch/: phoxi_camera_interfaces.test  phoxi_camera_ros_interface_class.test
test/launch/: phoxi_api_interface_class.test  phoxi_camera_ros_interfaces.test  phoxi_camera_ros_interfaces_exist.test
tests/: README.md
tests/interfaces/: config.py  test_phoxi_camera_interfaces.py
urdf/: PhoXi3Dscanner.xacro  PhoXi3Dscanner_values.xacro
